--- a/esas_exploratory.Rmd
+++ b/esas_exploratory.Rmd
@@ -1111,3 +1111,120 @@ hist(lin_reg_meds$Value)
 
 hmm would this even work??
 
+
+
+# Facet_wrap or grid?
+
+```{r}
+grid_arrange_shared_legend(education1, education2, education3, education4, ncol=2, nrow=2, position = 'top')
+```
+
+```{r}
+education1 <- make_plot("Took Prescription Medication for Mental Health, Last 4 Weeks", "By Education")
+education2 <- make_plot("Received Counseling or Therapy, Last 4 Weeks", "By Education")
+education3 <- make_plot("Took Prescription Medication for Mental Health And/Or Received Counseling or Therapy, Last 4 Weeks", "By Education")
+education4 <- make_plot("Needed Counseling or Therapy But Did Not Get It, Last 4 Weeks", "By Education")
+```
+
+```{r}
+my_colors <- brewer.pal(3, "Set1")
+
+plot <- new_data_fixed %>% 
+    filter(Group == "By Sex") %>% 
+    na.omit() %>% #need to omit in order for the geom_ribbon to work
+    ggplot(aes(x = avg_cases, y = (Value/100))) +
+    geom_ribbon(aes(ymin = (LowCI/100), ymax = (HighCI/100), fill = Subgroup), alpha = .1, show.legend = FALSE) +
+    geom_point(aes(color = Subgroup)) +
+    labs(title = "Hi", subtitle = "Given the number of COVID cases during the time period") +
+    #theme(legend.position = "right") +
+    scale_color_manual(values = my_colors) +
+    scale_fill_manual(values = my_colors) +
+    theme_classic() +
+    scale_x_continuous("Average Daily COVID-19 Cases in the US", labels = scales::comma_format()) +
+    scale_y_continuous("Indicator", labels = scales::percent_format(accuracy = 5L)) +
+  facet_wrap(~Indicator)
+  
+  plot
+```
+
+
+### Editing the function to make plot
+
+```{r}
+#Function to make each plot
+make_plot <- function(grp){
+  
+  caption <- ""
+
+  #Group things
+  if (grp == "By Age") {
+    leg_title <- "Age (years)"
+    leg_breaks <- c("18 - 29 years", "30 - 39 years", "40 - 49 years", "50 - 59 years", "60 - 69 years", "70 - 79 years", "80 years and above")
+    leg_labels <- c("18 - 29", "30 - 39", "40 - 49", "50 - 59", "60 - 69", "70 - 79", "80 +")
+    num <- 7
+  }
+  
+  if (grp == "By Sex") {
+    leg_title <- "Sex (binary M/F)"
+    leg_breaks <- c("Male", "Female")
+    leg_labels <- c("Male", "Female")
+    caption <- "Note: These labels may not accurately reflect the gender identities of all survey participants"
+    num <- 2
+  }
+  
+  if (grp == "By Education") {
+    leg_title <- "Education Level"
+    leg_breaks <- c("Bachelor's degree or higher", "Some college/Associate's degree", "High school diploma or GED", "Less than a high school diploma")
+    leg_labels <- c("Bachelor's", "Some College", "High School", "Less than HS")
+    num <- 4
+  }
+  
+  if (grp == "By Presence of Symptoms of Anxiety/Depression") {
+    leg_title <- "Symptoms of Anxiety/Depression"
+    leg_breaks <- c("Did not experience symptoms of anxiety/depression in the past 4 weeks", "Experienced symptoms of anxiety/depression in past 4 weeks")
+    leg_labels <- c("Experienced Symptoms", "No Symptoms")
+    caption <- "Note: These data may not accurately reflect the mental health of all survey participants"
+    num <- 2
+  }
+  
+  if (grp == "By Race/Hispanic ethnicity") {
+    leg_title <- "Race/Hispanic ethnicity"
+    leg_breaks <- c("Hispanic or Latino", "Non-Hispanic white, single race", "Non-Hispanic black, single race", "Non-Hispanic Asian, single race", "Non-Hispanic, other races and multiple races")
+    leg_labels <- c("Hispanic or Latino", "Non-Hispanic white", "Non-Hispanic black", "Non-Hispanic Asian", "Non-Hispanic, other")
+    caption <- "Note: These labels may not accurately reflect the racial/ethnic background of all survey participants"
+    num <- 5
+  }
+  
+  my_colors <- brewer.pal(num, "Set1")
+  
+  #Making the darn plot
+  plot <- new_data_fixed %>% 
+    filter(Group == grp) %>% 
+    mutate(Indicator = recode(Indicator,
+                              "Took Prescription Medication for Mental Health, Last 4 Weeks" = "Took Medication for Mental Health",
+                              "Received Counseling or Therapy, Last 4 Weeks" = "Received Counseling or Therapy",
+                              "Took Prescription Medication for Mental Health And/Or Received Counseling or Therapy, Last 4 Weeks" = "Took Meds and/or Received Counseling", "Needed Counseling or Therapy But Did Not Get It, Last 4 Weeks" = "Needed But Didn't Get Counseling")) %>% 
+    na.omit() %>% #need to omit in order for the geom_ribbon to work
+    ggplot(aes(x = avg_cases, y = (Value/100))) +
+    geom_ribbon(aes(ymin = (LowCI/100), ymax = (HighCI/100), fill = Subgroup), alpha = .1, show.legend = FALSE) +
+    geom_point(aes(color = Subgroup)) +
+    labs(title = grp, subtitle = "Given the number of COVID cases during the time period", caption = caption) +
+    theme(legend.position = "right") +
+    scale_color_manual(values = my_colors, name = leg_title, breaks = leg_breaks, labels = leg_labels) +
+    scale_fill_manual(values = my_colors, breaks = leg_breaks, labels = leg_labels) +
+    theme_classic() +
+    scale_x_continuous("Average Daily COVID-19 Cases in the US", labels = scales::comma_format()) +
+    scale_y_continuous("Percent of Adults Who...", labels = scales::percent_format(accuracy = 5L)) +
+    facet_wrap(~Indicator, labeller = label_wrap_gen(width = 50, multi_line = TRUE))
+  
+  plot
+}
+```
+
+
+```{r}
+make_plot("By Age") 
+```
+
+
+
